--- a/styles.css
+++ b/styles.css
@@ -7,31 +7,36 @@
 
 .Header{
     padding-left: 10px;
+    padding-top: 10px;
     font-family: 'Montserrat', sans-serif;
     background-color: rgb(42, 68, 111);
     height: 100px;
-    position: relative;
+    /* position: relative; */
     color: white;
-    font-size: 50px;
+    font-size: 35px;
     text-align: left;
     width: 100%;
     padding-bottom: 5px;
+    display: flex;
+    flex-direction: row;
 }
 
 .OrganisationName{
-    position: absolute;
-    top: 20px;
+    /* position: absolute; */
+    /* top: 60%; */
+    display: flex;
+    align-items: center;
 }
 
 .SuryaLogo{
-    position: absolute;
-    width: 50%;
+    /* position: absolute; */
+    width: 9%;
     height: 100%;
     top: 0;
-    right: 0;
+    left: 0;
 }
 .SuryaLogo img{
-    position: absolute;
+    /* position: absolute; */
     height: 100%;
     width: auto;
 }
